mutate-toml/src/snapshots/mutate_toml__tests__set_dotted_key_in_existing_table.snap
---
source: src/lib.rs
expression: editor.finish().unwrap()
---
[vscode.settings]
"editor.formatOnSave" = true
"editor.tabSize" = 2
