mutate-toml/src/snapshots/mutate_toml__tests__set_dotted_key_new_table.snap
---
source: src/lib.rs
expression: editor.finish().unwrap()
---
[package]
name = "test"

[vscode.settings]
"editor.formatOnSave" = true
