mutate-toml/src/snapshots/mutate_toml__tests__set_existing_value.snap
---
source: src/lib.rs
expression: editor.finish().unwrap()
---
[package]
name = "test"
version = "0.2.0"
